--- a/dashboard.html
+++ b/dashboard.html
@@ -56,7 +56,7 @@
         <li>
           <span class="feature-icon"><i class="fa-solid fa-calendar-days"></i></span>
           <div>
-            <div class="feature-title">Calender</div>
+            <div class="feature-title">Calendar</div>
             <div class="feature-desc">Always stay on track, by planning out your day.</div>
           </div>
         </li>
