--- a/dashboard.html
+++ b/dashboard.html
@@ -8,6 +8,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
   <link href="/css/home.css" rel="stylesheet">
   <link rel="icon" href="/uploads/images/favicon.png" type="image/png">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" integrity="sha512-SOME_HASH" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
 <div class="loader"></div>
