--- a/signin.html
+++ b/signin.html
@@ -22,6 +22,12 @@
   </style>
 </head>
 <body>
+  <header>
+     <img src="/uploads/images/daylee.png" alt="Daylee Logo" style="width:64px;height:64px;border-radius:16px;box-shadow:0 4px 16px #2563eb22;margin-bottom:0.5rem;animation: popIn 1.2s cubic-bezier(.4,0,.2,1);" class="logo" />
+     <br>
+    <span class="logo">daylee</span>
+    <div class="subtitle">A calendar app, reimagined.<br>Smarter, simpler, and more connected to your day.</div>
+  </header>
 <div class="container">
   <h1>Daylee</h1>
   <form id="loginForm">
