Redo dashboard, have links on side

--- a/dashboard.html
+++ b/dashboard.html
@@ -6,9 +6,11 @@
   <title>Daylee – Dashboard</title>
   <meta name="description" content="Daylee is a modern calendar app with built-in weather, AI tools, smart notifications, and more. Organize your life, your way.">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
+  <!-- Add this inside your <head> section -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
   <link href="/css/home.css" rel="stylesheet">
   <link rel="icon" href="/uploads/images/favicon.png" type="image/png">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" integrity="sha512-SOME_HASH" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  
   <style>
     body {
       background: #f6f8fc;
