--- a/signin.html
+++ b/signin.html
@@ -6,26 +6,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
   <link href="/css/home.css" rel="stylesheet">
-  <script src="https://www.gstatic.com/firebasejs/10.11.0/firebase-app-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/10.11.0/firebase-auth-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/10.11.0/firebase-firestore-compat.js"></script>
-  <style>
-    body { font-family: 'Inter', Arial, sans-serif; background: #f1f5fd; }
-    .container { max-width: 400px; margin: 3em auto; background: #fff; border-radius: 16px; box-shadow: 0 2px 16px #2563eb22; padding: 2em; }
-    h1 { color: #2563eb; }
-    input, button { width: 100%; margin-bottom: 1em; padding: 0.7em; border-radius: 8px; border: 1px solid #e5e7eb; font-size: 1em; }
-    button { background: linear-gradient(90deg,#2563eb 0%,#06b6d4 100%); color: #fff; font-weight: 700; border: none; }
-    .error { color: #d32f2f; margin-bottom: 1em; }
-    .success { color: #388e3c; margin-bottom: 1em; }
-    .switch { text-align: center; margin-top: 1em; }
-    .switch a { color: #2563eb; cursor: pointer; }
-  </style>
+  <link href="/css/signin.css" rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+  <script src="/javascript/signin.js" defer></script>
 </head>
 <body>
   <header>
-     <img src="/uploads/images/daylee.png" alt="Daylee Logo" style="width:64px;height:64px;border-radius:16px;box-shadow:0 4px 16px #2563eb22;margin-bottom:0.5rem;animation: popIn 1.2s cubic-bezier(.4,0,.2,1);" class="logo" />
-     <br>
-    <span class="logo">daylee</span>
+    <img src="/uploads/images/daylee.png" alt="Daylee Logo" class="logo" style="width:64px;height:64px;border-radius:16px;box-shadow:0 4px 16px #2563eb22;margin-bottom:0.5rem;animation: popIn 1.2s cubic-bezier(.4,0,.2,1);" />
+    <br>
+    <span class="logo">Daylee</span>
     <div class="subtitle">A calendar app, reimagined.<br>Smarter, simpler, and more connected to your day.</div>
   </header>
 <div class="container">
@@ -50,91 +39,6 @@
     <span id="switchToLogin" style="display:none;">Already have an account? <a>Login</a></span>
   </div>
 </div>
-<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-<script>
-  const SUPABASE_URL = "https://qfgmcnbqhhelrdxvdrdb.supabase.co";
-  const SUPABASE_ANON_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InFmZ21jbmJxaGhlbHJkeHZkcmRiIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NDgxMTY2OTgsImV4cCI6MjA2MzY5MjY5OH0.OZhA0jmUmGcQ5ZJs3gxy99blGsz7YyRJyBfiHDDAWIc";
-  const supabase = window.supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
-
-  // --- Switch Forms ---
-  document.getElementById('switchToSignup').onclick = () => {
-    document.getElementById('loginForm').style.display = 'none';
-    document.getElementById('signupForm').style.display = '';
-    document.getElementById('switchToSignup').style.display = 'none';
-    document.getElementById('switchToLogin').style.display = '';
-  };
-  document.getElementById('switchToLogin').onclick = () => {
-    document.getElementById('loginForm').style.display = '';
-    document.getElementById('signupForm').style.display = 'none';
-    document.getElementById('switchToSignup').style.display = '';
-    document.getElementById('switchToLogin').style.display = 'none';
-  };
-
-  // --- Login ---
-  document.getElementById('loginForm').onsubmit = async function(e) {
-    e.preventDefault();
-    document.getElementById('loginError').textContent = '';
-    const { data, error } = await supabase.auth.signInWithPassword({
-      email: loginEmail.value,
-      password: loginPassword.value
-    });
-    if (error) {
-      document.getElementById('loginError').textContent = error.message;
-    } else {
-      window.location.href = "/dashboard";
-    }
-  };
-
-  // --- Signup ---
-  document.getElementById('signupForm').onsubmit = async function(e) {
-    e.preventDefault();
-    document.getElementById('signupError').textContent = '';
-    document.getElementById('signupSuccess').textContent = '';
-    const name = signupName.value;
-    const email = signupEmail.value;
-    const password = signupPassword.value;
-    let familyCode = signupFamilyCode.value.trim();
-    try {
-      let familyId, role;
-      if (!familyCode) {
-        // Create new family
-        familyCode = Math.random().toString().slice(2,12);
-        const { data: fam, error: famErr } = await supabase
-          .from('families')
-          .insert([{ code: familyCode }])
-          .select()
-          .single();
-        if (famErr) throw famErr;
-        familyId = fam.id;
-        role = "organizer";
-      } else {
-        // Join existing family
-        const { data: fam, error: famErr } = await supabase
-          .from('families')
-          .select('*')
-          .eq('code', familyCode)
-          .single();
-        if (famErr || !fam) throw new Error("Invalid family code.");
-        familyId = fam.id;
-        role = "member";
-      }
-      // Create user
-      const { data: signUpData, error: signUpErr } = await supabase.auth.signUp({
-        email, password
-      });
-      if (signUpErr) throw signUpErr;
-      const userId = signUpData.user.id;
-      // Insert profile
-      const { error: profErr } = await supabase
-        .from('profiles')
-        .insert([{ id: userId, name, email, family_id: familyId, role }]);
-      if (profErr) throw profErr;
-      document.getElementById('signupSuccess').textContent = "Signup successful! You can now log in.";
-    } catch (err) {
-      document.getElementById('signupError').textContent = err.message || err.error_description;
-    }
-  };
-</script>
   <footer>
     Daylee -  Organize your life, your way.
   </footer>
