--- a/dashboard.html
+++ b/dashboard.html
@@ -15,6 +15,10 @@
 </head>
 <body>
 <div class="loader"></div>
+<button class="mobile-nav-toggle" id="mobileNavToggle" aria-label="Open navigation">
+  <i class="fa fa-bars"></i>
+</button>
+<div class="mobile-nav-overlay" id="mobileNavOverlay"></div>
 <header id="mainHeader">
   <img src="/uploads/images/daylee.png" alt="Daylee Logo" class="logo" style="width:64px;height:64px;border-radius:16px;box-shadow:0 4px 16px #2563eb22;margin-bottom:0.5rem;animation: popIn 1.2s cubic-bezier(.4,0,.2,1);" />
     <br>
@@ -22,7 +26,7 @@
   <div class="subtitle">A calendar app, reimagined.<br>Smarter, simpler, and more connected to your day.</div>
 </header>
 <div class="dashboard-container">
-  <aside class="sidebar">
+  <aside class="sidebar" id="sidebar">
     <img class="logo" src="/uploads/images/daylee.png" alt="Daylee Logo"/>
     <div class="app-title">daylee</div>
     <div class="subtitle">A calendar app, reimagined.</div>
