add many things

--- a/ai.html
+++ b/ai.html
@@ -32,5 +32,6 @@
   <footer>
     Daylee -  Organize your life, your way.
   </footer>
+  <script src="https://js.puter.com/v2/"></script>
 </body>
 </html>
