--- a/calendar.html
+++ b/calendar.html
@@ -56,6 +56,8 @@
         <label>Category
           <input type="text" id="eventCategory" maxlength="32">
         </label>
+        <label for="eventFor">For:</label>
+        <select id="eventFor" class="event-for"></select>
         <label>
           <input type="checkbox" id="eventPrivate">
           Private (only you)
