--- a/dashboard.html
+++ b/dashboard.html
@@ -36,7 +36,7 @@
       <a href="/weather.html" class="nav-link" data-iframe="true"><i class="fa-solid fa-cloud-bolt"></i>Weather</a>
       <a href="/ai.html" class="nav-link" data-iframe="true"><i class="fa-solid fa-robot"></i>Schedula AI</a>
       <a href="/locate.html" class="nav-link" data-iframe="true"><i class="fa-solid fa-earth-americas"></i>Websites & Locations</a>
-      <a href="/signin.html" class="nav-link" data-iframe="true"><i class="fa-solid fa-user"></i>Sign In / Sign Up</a>
+      <a href="/chat.html" class="nav-link" data-iframe="true"><i class="fa-solid fa-comment"></i>Family Chat</a>
     </nav>
   </aside>
 
