--- a/chat.html
+++ b/chat.html
@@ -10,6 +10,7 @@
   <link href="/css/main.css" rel="stylesheet">
   <link href="/css/home.css" rel="stylesheet">
   <link href="/css/chat.css" rel="stylesheet">
+  <script src="/javascript/chat.js" defer></script>
   <style>
     body {
       background: linear-gradient(135deg, #f0f4ff 0%, #e0e7ff 100%);
